[package]
name = "garden"
version = "1.0.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
rand = "0.8"
bevy_asset_loader =  "0.20"
bevy_silk = "0.8"
bevy_rand = {version = "0.6", features = ["rand_chacha", "wyrand"]}
bevy_xpbd_3d = "0.4"
oxidized_navigation = "0.10"
bevy_editor_pls = "0.8"
bevy_dolly = "0.0.3"

[build-dependencies]
embed-resource = "2.4"
